Deprecate/forbid constructors for Integer, Long, Float, Byte, Double, and Short
Patch by edimitrova and brandonwilliams; reviewed by bereng for
CASSANDRA-18449